--- a/src/layouts/navbar.scss
+++ b/src/layouts/navbar.scss
@@ -31,6 +31,8 @@
   @extend .black-70;
   @extend .mr3;
   @extend .dib;
+  @extend .f7;
+  @extend .tracked;
 }
 
 .navbar-item-right {
@@ -45,6 +47,7 @@
     @extend .mr3;
     @extend .lh-copy;
     @extend .white;
+    @extend .ttu;
 
     &:hover {
       text-decoration: none;
@@ -82,6 +85,7 @@
   @extend .br-pill;
   @extend .b--black-60;
   @extend .b-focus--graphile-red;
+  @extend .f5;
 }
 
 .searchbox-container {
